# ai-tg-bot

./: .dockerignore  .env.example  .gitigmore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.build/: DEPLOYMENT.md  Dockerfile  build-prod.ps1  docker-compose.prod.yml  entrypoint.sh
.build/nginx/: Dockerfile  README.md  nginx.conf
.cursor/commands/: review.md
.cursor/plans/: sprint-s1-database-4d4dfa9b.plan.md
.cursor/rules/: conventions.mdc  qa_conventions.mdc  workflow.mdc  workflow_tdd.mdc
.github/workflows/: ci-api.yml  ci-bot.yml  ci-frontend.yml  ci-nginx.yml  ci.yml
alembic/versions/: e9844b552bfa_initial_schema.py  f902e33d1a46_add_composite_index_for_messages_query_.py
backend/api/: .env.example  Dockerfile  README.md  pyproject.toml  run_api.py
backend/api/scripts/: README.md  __init__.py  load_test.py
backend/api/src/: __init__.py  app.py  config.py  database.py  models.py
backend/api/src/middlewares/: __init__.py  rate_limit.py
backend/api/src/routers/: auth.py  stats.py
backend/api/src/stats/: __init__.py  collector.py  factory.py  mock_collector.py  models.py  real_collector.py
backend/api/src/utils/: __init__.py  auth.py
backend/api/tests/: test_auth.py  test_cors.py  test_mock_collector.py  test_rate_limit.py
backend/api/tests/integration/: README.md  TESTING_APPROACH.md  __init__.py  conftest.py  test_real_collector_integration.py
backend/bot/: .env.example  Dockerfile.dev  README.md  pyproject.toml
backend/bot/alembic/: env.py
backend/bot/src/: config.py  models.py
backend/bot/tests/: conftest.py  test_bot.py  test_llm_client.py  test_log_sanitizer.py  test_rate_limit.py  test_storage.py
docs/: FALLBACK.md  fallbackTasklist.md  idea.md  roadmap.md  tasklist.md  techDebtTasklist.md  vision.md
docs/api/: README.md  architecture.md  database.md  llm_client.md  mock-collector.md  stats-api-contract.md
docs/backend/api/: architecture.md  collector-modes.md  mock-collector.md  stats-api-contract.md
docs/frontend/: dashboard-requirements.md  front-vision.md
docs/guides/: README.md  VISUAL_GUIDE.md  ci-cd.md  secrets-management.md
docs/reviews/: review-0001.md  review-0002.md
docs/tasklists/: tasklist-S2.md  tasklist-S3.md  tasklist-S4.md  tasklist-S5.md  tasklist-S7.md  tasklist-S8.md  tasklist-S9.md  techDebtTasklist-S0.md
frontend/: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/components/dashboard/: ActivityChart.tsx  EmptyState.tsx  ErrorState.tsx  PeriodFilter.tsx  README.md  RecentDialogsTable.tsx  StatsCard.tsx  SummarySection.tsx  TopUsersTable.tsx  app-sidebar.tsx
frontend/components/layout/: Footer.tsx  Header.tsx  README.md
frontend/components/ui/: alert.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  sidebar.tsx  table.tsx  theme-toggle.tsx
frontend/config/: README.md  api.ts  site.ts
frontend/lib/: api.ts
frontend/lib/hooks/: README.md  useStats.ts
frontend/lib/utils/: date.ts  formatters.ts
frontend/tests/integration/: E2E_TESTING.md  test-dashboard-quick.js  test-dashboard.js
frontend/tests/unit/: api.test.ts  example.test.tsx
frontend/types/: api.ts  index.d.ts
src/: __init__.py  bot.py  config.py  database.py  llm_client.py  main.py  models.py  storage.py
src/handlers/: commands.py  messages.py
src/utils/: __init__.py  log_sanitizer.py
tests/: conftest.py  test_config.py  test_error_formatter.py  test_handlers_integration.py  test_llm_client.py  test_message_splitter.py  test_storage.py
tests/integration/: test_handlers_integration.py  test_storage_integration.py
(+15 files in other folders)
